# mockingbird-simulator

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: run copy.py  run.py
resources/scenarios/Basic/Mission1/: actions.csv  aircraft.csv  sectors.json
resources/scenarios/Basic/Mission2/: aircraft.csv  fixes.csv  meta.json
resources/scenarios/basic/Mission1/: actions.csv  aircraft.csv  fixes.csv  meta.json
resources/scenarios/basic/Mission2/: aircraft.csv  sectors.json
resources/scenarios/basic_old/Mission1/: actions.csv
schema/: action.md  aircraft.md
simulator/: airspace.py  settings.py  simulator.py  state.py
tests/: test_install.py
