[tool.poetry]
name = "simulator"
version = "1.1.0"
description = "Air traffic control simulator"
authors = ["Freddy Wordingham <freddy@digilab.co.uk>, Michelle Bieger <michelle@digilab.co.uk>, Alexander Mead <alexander@digilab.co.uk>"]

[tool.poetry.dependencies]
# interface = { git = "https://github.com/digiLab-ai/mockingbird-interface", branch = "main" }
interface = { path = "../interface", develop = true }
numpy = "^1.23.4"
pandas = "^1.5.0"
pydantic = { version = "^1.10.4", extras = ["dotenv"] }
pyproj = "^3.4.0"
python = ">=3.9,<3.12"
shapely = "^1.8.5.post1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^6.0.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
